# Star-wars-arcade

./: .gitignore  CMakeLists.txt  CodeRules.md  GDD.md  README.md  main.cpp
OBJFiles/: Cube.fbx  Fall A Loop.fbx  Grid.fbx  Idle.fbx  Jump.fbx  Liberator.mtl  Plane.fbx  Running.fbx  Standing Melee Attack Horizontal.fbx  Strut Walking.fbx  Walking.fbx  offset.fbx  skybox.mtl  templeColliders.fbx  untitled.fbx
OBJFiles/Harrower/: Base.mtl  Details.mtl  Ports.mtl  Sides.mtl
Shaders/: fragment_core.glsl  fragment_directional.glsl  fragment_skinned_diffuse.glsl  fragment_unlit.glsl  vertex_skinned_diffuse.glsl
src/: FieldScene.cpp  FieldScene.h
src/Animations/: Animation.h  Animator.h  Animdata.h  BasicAnimator.h  BasicBlendAnimator.h  Bone.h  CharacterAnimations.h  CharacterAnimator.h  SkinnedModel.h
src/BaseComponents/: Animator.cpp  Animator.h  Camera.h  Collider.h  Model.h  SphereCollider.h
src/Components/: Follower.h  Light.h  Model.h
src/Engine/: AssimpLoader.cpp  AssimpLoader.h  CollisionDetector.cpp  CollisionDetector.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.h  OBJLoader.h  Primitives.h  Scene.cpp  Scene.h  Shader.h  SkinnedMesh.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h  TerrainGenerator.h  Texture.h  Vertex.cpp  Vertex.h
src/GameComponents/: Blaster.cpp  Blaster.h  Bullet.cpp  Bullet.h  CameraController.h  CameraFollower.h  Character.cpp  Character.h  CharacterController.cpp  CharacterController.h  CharacterHealth.cpp  CharacterHealth.h  DamageDealArea.h  Follower.h  FractionMember.h  HealthPresenter.h  IDamageable.h  Particle.h  ParticleSystem.h  PlayerAttackController.h  PlayerMovement.h  Respawn.h
src/Model/: Character.cpp  Character.h  Observer.h
src/Navigation/: CharacterStateMachines.cpp  CharacterStateMachines.hpp  CharacterStates.cpp  CharacterStates.hpp  JediStateMachine.cpp  JediStateMachine.hpp  NavMesh.cpp  NavMesh.hpp  NavMeshAgent.cpp  NavMeshAgent.hpp  NavMeshGenerator.h  Struct_utilities.cpp  Struct_utilities.hpp  polypartition.cpp  polypartition.h
src/Physics/: Collider.h  TerrainCollider.h  bounds.cpp  bounds.h  environment.h  linalg.cpp  linalg.h  list.hpp  meshcollider.cpp  meshcollider.h  octree.cpp  octree.h  ray.cpp  ray.h  rigidbody.cpp  rigidbody.h
src/Utilities/: AssimpMath.h  BasicTransitions.h  StateMachine.cpp  StateMachine.h  assimp_glm_helpers.h
